[gd_scene load_steps=2 format=3 uid="uid://d5kp2m8n3q7xr"]

[ext_resource type="Script" path="res://scripts/ui/card_ui.gd" id="1_card_ui"]

[node name="CardUI" type="Control"]
custom_minimum_size = Vector2(120, 180)
layout_mode = 0
offset_right = 120.0
offset_bottom = 180.0
mouse_filter = 0
script = ExtResource("1_card_ui")

[node name="BackgroundPanel" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.2, 0.3, 0.4, 1)
mouse_filter = 2

[node name="CardName" type="Label" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 5.0
offset_bottom = 25.0
grow_horizontal = 2
text = "Card Name"
horizontal_alignment = 1
vertical_alignment = 1
mouse_filter = 2

[node name="CostLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -30.0
offset_top = 5.0
offset_right = -5.0
offset_bottom = 30.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 18
text = "3"
horizontal_alignment = 1
vertical_alignment = 1
mouse_filter = 2

[node name="CardTypeIcon" type="TextureRect" parent="."]
custom_minimum_size = Vector2(32, 32)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -16.0
offset_top = -30.0
offset_right = 16.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 5
mouse_filter = 2

[node name="DescriptionLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = -60.0
offset_right = -5.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 0
text = "Card description goes here."
autowrap_mode = 3
mouse_filter = 2
